--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
       :root {
         font-family: monospace;
       }
+      #compass {
+        font-size: 4em;
+        height: 2em;
+        background-color: lightgreen;
+      }
+      #compass #north {
+        display: inline-flex;
+        height: 100%;
+        width: 100vw;
+        background: white;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        left: 0;
+      }
     </style>
   </head>
   <body>
