--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       #compass {
         font-size: 4em;
         height: 2em;
+        overflow-x: hidden;
       }
       #compass #north {
         display: inline-flex;
