--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
         top: 0;
       }
       #compass #north::before {
-        background: linear-gradient(90deg, rgba(255,255,255,1) 0%, #77bca5 100%);
+        background: linear-gradient(90deg, rgb(119, 188, 165, 0) 0%, rgb(119, 188, 165, 1) 100%);
         right: 100%;
       }
       #compass #north::after {
-        background: linear-gradient(90deg, #77bca5 0%, rgba(255,255,255,1) 100%);
+        background: linear-gradient(90deg, rgb(119, 188, 165, 1) 0%, rgb(119, 188, 165, 0) 100%);
         left: 100%;
       }
     </style>
