--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         background: linear-gradient(90deg, rgb(119, 188, 165, 1) 0%, rgb(119, 188, 165, 0) 100%);
         left: 100%;
       }
+      a {
+        color: inherit;
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -124,7 +128,7 @@
       </div>
       <div id="compass">
         <div id="north">
-          <p>Ember.js</p>
+          <p><a href="https://guides.emberjs.com/release/">Ember.js</a></p>
         </div>
       </div>
     </main>
